--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -21,6 +21,7 @@
         background-color: #f2f2f2;
         padding: 1rem;
         margin-right: 1rem;
+        margin-left: 1rem;
         border-radius: 1.5rem;
         text-align: center;
     }
