--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,25 +1,28 @@
 @use "color";
 
 .main-header {
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 0.75rem;
+
     background-color: color.$black;
     color: color.$white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.75rem 2rem;
-
-    .logo {
-        font-weight: bold;
-        font-size: 1.5rem;
-    }
 
     .nav-menu {
         display: flex;
-        gap: 1.5rem;
+        gap: 4rem;
         align-items: center;
 
+        .logo {
+            font-weight: bold;
+            font-size: 1.5rem;
+        }
+
         .user-icon {
-            font-size: 1.2rem;
+            font-size: 2rem;
         }
     }
 }
