--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -1,45 +1,63 @@
+@use "color";
+
 .main-container {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(135deg, #f7f7f7 25%, #eeeeee 25%, #eeeeee 50%, #f7f7f7 50%, #f7f7f7 75%, #eeeeee 75%);
-    background-size: 40px 40px;
+    background: linear-gradient(-135deg, #f7f7f7 25%, #eeeeee 25%, #eeeeee 50%, #f7f7f7 50%, #f7f7f7 75%, #eeeeee 75%);
+    background-size: 320px 320px;
     font-family: 'Segoe UI', sans-serif;
 }
 
 .main-content {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: calc(100% - 60px); // 헤더 높이 반영
 
-    .side-title {
-        writing-mode: vertical-rl;
-        transform: rotate(0deg);
-        font-size: 10rem;
-        font-weight: bold;
-        color: #555;
-        background-color: #f2f2f2;
-        padding: 1rem;
-        margin-right: 1rem;
-        margin-left: 1rem;
-        border-radius: 1.5rem;
-        text-align: center;
-    }
-
     .image-box {
-        background-color: #d3d3d3;
-        width: 60%;
-        height: 80%;
+        position: relative;
+        width: 1000px;
+        height: 700px;
         border-radius: 40px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        background-color: color.$white;
 
-        h1 {
-            font-size: 2rem;
-            color: #333;
-            text-decoration: underline;
+        .left-panel {
+            flex: 10%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: flex-start;
+            padding: 30px;
+            z-index: 2;
+
+            h1 {
+                font-family:'Times New Roman', Times, serif;
+                color: color.$black;
+                font-size: 5rem;
+                font-weight: 700;
+                letter-spacing: 0.2rem;
+                margin: 0;
+            }
+        }
+
+        .right-panel {
+            flex: 90%;
+            background-image: url('../images/Main_image1.png');
+            background-size: cover;
+            background-position: center;
+            clip-path: polygon(100% 0%, 100% 100%, 10% 100%, 0% 0%);
+            z-index: 1;
+        }
+
+        .diagonal-line {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 3;
         }
     }
 }
