Add_Router / Add_Link

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -9,12 +9,14 @@
 
     .center-title {
         color: color.$white;
+        font-family: 'PyeongChang-Bold';
         font-size: 2rem;
         font-weight: bold;
         letter-spacing: 0.3rem;
     }
 
     .copy-title {
+        font-family: 'PyeongChang-Light';
         color: #ccc;
         margin-top: 1rem;
         font-size: 8pt;
