--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'PyeongChang-Bold';
+  src: url('./fonts/PyeongChangPeace-Bold.ttf');
+}
+
+@font-face {
+  font-family: 'PyeongChang-Light';
+  src: url('./fonts/PyeongChangPeace-Light.ttf');
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -15,7 +25,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ffffff;
   text-decoration: inherit;
 }
 a:hover {
