--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -7,22 +7,34 @@
     display: flex;
     justify-content: center;
     padding: 0.75rem;
-
     background-color: color.$black;
     color: color.$white;
 
     .nav-menu {
+        font-family: 'PyeongChang-Light';
         display: flex;
-        gap: 4rem;
+        gap: 5rem;
         align-items: center;
 
         .logo {
-            font-weight: bold;
+            font-family: 'PyeongChang-Bold';
             font-size: 1.5rem;
         }
 
         .user-icon {
+            display: flex;
             font-size: 2rem;
+        }
+
+        .download {
+            display: flex;
+            height: 30px;
+            width: 110px;
+            border-radius: 30px;
+            color: color.$black;
+            background-color: #e2ff63;
+            align-items: center;
+            justify-content: center;
         }
     }
 }
