--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -5,7 +5,6 @@
     height: 100vh;
     background: linear-gradient(-135deg, #f7f7f7 25%, #eeeeee 25%, #eeeeee 50%, #f7f7f7 50%, #f7f7f7 75%, #eeeeee 75%);
     background-size: 320px 320px;
-    font-family: 'Segoe UI', sans-serif;
 }
 
 .main-content {
@@ -32,11 +31,10 @@
             z-index: 2;
 
             h1 {
-                font-family:'Times New Roman', Times, serif;
+                font-family: 'PyeongChang-Bold';
                 color: color.$black;
                 font-size: 5rem;
-                font-weight: 700;
-                letter-spacing: 0.2rem;
+                letter-spacing: 0.1rem;
                 margin: 0;
             }
         }
