--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,4 +1,4 @@
-@use "color";
+@use "Nesting";
 
 .main-header {
     position: fixed;
@@ -7,17 +7,17 @@
     display: flex;
     justify-content: center;
     padding: 0.75rem;
-    background-color: color.$black;
-    color: color.$white;
+    background-color: Nesting.$black;
+    color: Nesting.$white;
 
     .nav-menu {
-        font-family: 'PyeongChang-Light';
+        font-family: Nesting.$main_font_Light;
         display: flex;
         gap: 5rem;
         align-items: center;
 
         .logo {
-            font-family: 'PyeongChang-Bold';
+            font-family: Nesting.$main_font_Bold;
             font-size: 1.5rem;
         }
 
@@ -31,8 +31,8 @@
             height: 30px;
             width: 110px;
             border-radius: 30px;
-            color: color.$black;
-            background-color: #e2ff63;
+            color: Nesting.$black;
+            background-color: Nesting.$main_color;
             align-items: center;
             justify-content: center;
         }
