--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -1,5 +1,6 @@
 @use "Nesting";
 
+// 메인 홈
 .main-container {
     width: 100%;
     height: auto;
@@ -60,6 +61,7 @@
     }
 }
 
+// 메인 홈 메뉴
 .main-section {
     display: flex;
     width: 100%;
@@ -123,4 +125,29 @@
     }
 }
 
+// 더보기 버튼
+.more-button {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    margin-left: 80%;
 
+    background-color: Nesting.$black;
+    border: 4px solid Nesting.$gray;
+    color: Nesting.$white;
+    font-family: Nesting.$main_font_Bold;
+    font-size: 20px;
+    padding: 12px 24px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+
+    .icon { font-size: 16px; }
+
+    &:hover {
+        color: Nesting.$black;
+        background-color: Nesting.$white;
+        border: 4px solid Nesting.$black;
+        transform: translateY(-2px);
+    }
+}
