--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -61,6 +61,12 @@
     }
 }
 
+.main-menuBox {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
 // 메인 홈 메뉴
 .main-section {
     display: flex;
@@ -130,7 +136,6 @@
     display: inline-flex;
     align-items: center;
     gap: 8px;
-    margin-left: 80%;
 
     background-color: Nesting.$black;
     border: 4px solid Nesting.$gray;
