--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -46,7 +46,8 @@
     letter-spacing: 2px;
 }
 
-.signin_title {
+.signin_title,
+.signup_title {
     margin-bottom: 1.2rem;
 }
 
@@ -91,4 +92,9 @@
     margin: 1rem 0;
     border: none;
     border-top: 1px solid Nesting.$black;
+}
+
+.signup_form {
+    overflow: hidden;
+    margin-top: 1rem;
 }
