--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -39,7 +39,7 @@
     }
 }
 
-// 회원 로그인 모달창
+// 회원 로그인/회원가입 모달창
 .signin_logo {
     font-family: Nesting.$main_font_Bold;
     margin-bottom: 0.5rem;
