--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -51,7 +51,8 @@
     margin-bottom: 1.2rem;
 }
 
-.signin_input {
+.signin_input,
+.signup_input {
     width: 90%;
     padding: 1rem;
     background: rgb(230, 230, 230);
