--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -24,6 +24,7 @@
         .user-icon {
             display: flex;
             font-size: 2rem;
+            cursor: pointer;
         }
 
         .download {
