Delete Account 추가

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -96,7 +96,7 @@
 .verify_btn,
 .signout_btn,
 .profileupdate_btn,
-.userdelete_btn {
+.deleteaccount_btn {
     font-family: Nesting.$main_font_Light;
     background: Nesting.$black;
     color: Nesting.$white;
