Profile button 추가

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -99,6 +99,7 @@
 
 .verify_btn,
 .signout_btn,
+.gameinformation_btn,
 .profileupdate_btn,
 .deleteaccount_btn {
     font-family: Nesting.$main_font_Light;
