--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -101,7 +101,8 @@
 .signout_btn,
 .gameinformation_btn,
 .profileupdate_btn,
-.deleteaccount_btn {
+.deleteaccount_btn,
+.resetimg_btn {
     font-family: Nesting.$main_font_Light;
     background: Nesting.$black;
     color: Nesting.$white;
