회원정보수정 실시간 이미지 변경

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -144,7 +144,7 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        background-color: Nesting.$black;
+        background-color: Nesting.$white;
         flex-shrink: 0;
     }
 
