--- a/src/styles/Play.scss
+++ b/src/styles/Play.scss
@@ -2,13 +2,66 @@
 
 .play_container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 80vh;
+    min-height: 100vh;
     background: #111;
     color: Nesting.$white;
-    position: relative;
+    padding: 4rem 1rem;
     overflow: hidden;
+
+    .game_intro {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10rem;
+        margin-bottom: 6rem;
+        flex-wrap: wrap;
+
+        .text_content {
+            flex: 1;
+            max-width: 1000px;
+            text-align: left;
+
+            h2 {
+                font-size: 2rem;
+                font-family: Nesting.$main_font_Bold;
+                margin-bottom: 1rem;
+            }
+
+            p {
+                font-size: 1rem;
+                font-family: Nesting.$main_font_Light;
+                line-height: 1.6;
+                opacity: 0.9;
+                margin-bottom: 1.5rem;
+            }
+        }
+
+        .intro_image {
+            flex: 1;
+            max-width: 500px;
+            width: 100%;
+            height: 300px;
+            background-image: url('../images/Main_image1.png');
+            background-size: cover;
+            background-position: center;
+            border-radius: 1rem;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.15);
+        }
+    }
+
+    .slider_wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        width: 100%;
+        height: 400px;
+        margin-bottom: 5rem;
+        gap: 2rem;
+    }
 
     .arrow {
         font-size: 2.5rem;
@@ -19,7 +72,7 @@
         border-radius: 0.5rem;
         padding: 0.3rem 0.6rem;
         cursor: pointer;
-        z-index: 100;
+        z-index: 10;
 
         &.left {position: absolute; left: 2rem;}
         &.right {position: absolute; right: 2rem;}
