--- a/src/styles/Play.scss
+++ b/src/styles/Play.scss
@@ -103,12 +103,13 @@
         transition: all 0.4s ease;
         z-index: 1;
 
-        .img {
+        img {
             width: 100%;
             height: 180px;
             object-fit: cover;
             border-radius: 1rem;
             margin-bottom: 1rem;
+            display: block;
         }
 
         h3 {
