클라이언트 UI 수정

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -37,7 +37,8 @@
         }
 
         .user-icon,
-        .mail-icon {
+        .mail-icon,
+        .global-icon {
             display: flex;
             font-size: 2rem;
             cursor: pointer;
