--- a/src/styles/Play.scss
+++ b/src/styles/Play.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 1600px;
     background: #111;
     color: Nesting.$white;
     padding: 4rem 1rem;
